Give nav fixed positioning, gave relevant margin to other body elements, aligned elements

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,14 +32,12 @@ body {
 	margin: 0;
 }
 
-body * {
-	margin: 10px;
-}
-
 #nav {
 	display: inline-block;
 	height: 100%;
 	float: left;
+	margin: 0;
+	padding: 10px;
 	* {
 		margin: 0;
 		display: block;
@@ -54,21 +52,34 @@ body * {
 	}
 }
 
+iframe {
+    width: 100%;
+    transform: scale(0.6);
+    height: 600px;
+    border: 0;
+}
+
 .cont {
+	margin: 0;
 	display: inline-block;
+	margin-left: 170px;
+	* {
+		margin: 10px;
+	}
+}
+
+#hello {
 	float: left;
 }
 
-iframe {
-    width: 100%;
-    height: 600px;
-    transform: scale(0.6);
-    border: 0;
+#nav {
+	position: fixed;
 }
 
 .img {
 	display: inline-block;
 	cursor: pointer;
+	float: left;
 	* {
 		margin: 0;
 	}
